// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.bind.sh given: [case1] set --level fix when: [t0] level set to fix then: outputs sweet with bound level 1`] = `
"🐢 sweet! level bound

🐚 git.commit.bind
   └─ level: fix
"
`;

exports[`git.commit.bind.sh given: [case2] set --level feat when: [t0] level set to feat then: outputs sweet with bound level 1`] = `
"🐢 sweet! level bound

🐚 git.commit.bind
   └─ level: feat
"
`;

exports[`git.commit.bind.sh given: [case3] get when: [t0] level is bound to fix then: shows bound level 1`] = `
"🐢 lets check the bind...

🐚 git.commit.bind
   ├─ level: fix
   └─ source: explicit
"
`;

exports[`git.commit.bind.sh given: [case3] get when: [t1] no level is bound then: shows (none) 1`] = `
"🐢 lets check the bind...

🐚 git.commit.bind
   └─ level: (none — will nudge on feat commits)
"
`;

exports[`git.commit.bind.sh given: [case4] del when: [t0] level was bound then: removes the level file 1`] = `
"🐢 groovy, level cleared

🐚 git.commit.bind
   └─ level: (none)
"
`;

exports[`git.commit.bind.sh given: [case5] set --level with invalid value when: [t0] level is chore then: exits with error: stderr 1`] = `
"✋ ConstraintError: --level must be 'feat' or 'fix'
usage: git.commit.bind set --level fix|feat
"
`;

exports[`git.commit.bind.sh given: [case5] set --level with invalid value when: [t0] level is chore then: exits with error: stdout 1`] = `
"✋ ConstraintError: --level must be 'feat' or 'fix'
usage: git.commit.bind set --level fix|feat
"
`;

exports[`git.commit.bind.sh given: [case6] no subcommand when: [t0] no subcommand provided then: exits with error: stderr 1`] = `
"✋ ConstraintError: subcommand is required (get, set, or del)
usage: git.commit.bind get | set --level fix|feat | del
"
`;

exports[`git.commit.bind.sh given: [case6] no subcommand when: [t0] no subcommand provided then: exits with error: stdout 1`] = `
"✋ ConstraintError: subcommand is required (get, set, or del)
usage: git.commit.bind get | set --level fix|feat | del
"
`;

exports[`git.commit.bind.sh given: [case7] set without --level when: [t0] set but no --level flag then: exits with error: stderr 1`] = `
"✋ ConstraintError: --level is required for set
usage: git.commit.bind set --level fix|feat
"
`;

exports[`git.commit.bind.sh given: [case7] set without --level when: [t0] set but no --level flag then: exits with error: stdout 1`] = `
"✋ ConstraintError: --level is required for set
usage: git.commit.bind set --level fix|feat
"
`;

exports[`git.commit.bind.sh given: [case7] set without --level when: [t1] --level is the last arg, with no value then: a curated constraint, never a raw shift crash: stderr 1`] = `
"✋ ConstraintError: --level is required for set
usage: git.commit.bind set --level fix|feat
"
`;

exports[`git.commit.bind.sh given: [case7] set without --level when: [t1] --level is the last arg, with no value then: a curated constraint, never a raw shift crash: stdout 1`] = `
"✋ ConstraintError: --level is required for set
usage: git.commit.bind set --level fix|feat
"
`;
